# occ_gain_opt_matus2020

./: .gitignore  CLAUDE.md  README.md  camera_isapi.py  diagnose_demod.py  pyproject.toml  realtime_experiment_app.py  requirements.txt
.claude/: settings.local.json
.mplcache/: fontlist-v390.json
data/: Mseq_20_original.csv  Mseq_20_with_header.csv  Mseq_32_original.csv  Mseq_32_with_header.csv  Mseq_50_original.csv  Mseq_50_with_header.csv  Mseq_64_original.csv  Mseq_64_with_header.csv  Mseq_96_original.csv  Mseq_96_with_header.csv  Tx_PRBS.py
docs/: ALGORITHM.md  ANALYSIS.md  BER_ANALYSIS.md  COMPLETION_REPORT.md  FINAL_RUN_REPORT.md  FINAL_SUMMARY.md  PROBLEM_SUMMARY.md  PROJECT_SUMMARY.md  REALTIME_USAGE.md  REPRODUCTION_FIDELITY.md  USAGE.md  VISUALIZATION_GUIDE.md  WHY_2_ITERATIONS.md  final_comparison.md
others/: adaptive_experiment.py  comm_capture.py  gain_advisor.py  single_demod_all-exp.py
real/: cap_expo_iso3(1).py  cap_video (5)(1).py  get_camera_info(1).py
real/自适应算法（龚）/: 强化学习代码.docx  提供仿真+不随机（再改）.docx  添加误码率代码.docx  第三周修改代码（不随机）.docx  第三周修改代码（提供仿真）.docx
real/自适应阻尼算法（马）/: test - 副本.py
results/: experiment_report.txt
scripts/: batch_demodulate.py  ber_analysis.py  ber_comparison_plot.py  ber_vs_gain_analysis.py  demo_demodulation.py  validate_algorithm_on_real_data.py  validate_algorithms.py  validate_iterative_algorithm.py  verify_experiment.py
src/occ_gain_opt/: __init__.py  cli.py  config.py  data_acquisition.py  demodulation.py  examples.py  (+6 more)
src/occ_gain_opt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
(+28 files in other folders)
