[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "occ-gain-opt"
version = "0.1.0"
description = "OCC camera gain optimization algorithm reproduction"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy>=1.19.0",
  "scipy>=1.5.0",
  "matplotlib>=3.3.0",
  "opencv-python>=4.4.0",
]

[project.scripts]
occ-gain-opt = "occ_gain_opt.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
